# todo

./: .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: publish.yaml  run_tests.yaml
completions/: completion.bash
src/commands/: __init__.py  add.py  base.py  complete.py  count.py  create.py  delete.py  list.py  query.py  show.py  update.py
src/constants/: __init__.py  enum_alignment.py  help_commands.py
src/notify/: __init__.py  __main__.py  cli.py
src/notify/tests/: test_notify.py  test_todo.py
src/parsers/: __init__.py  completed.py  criteria.py  due.py  include_completed.py  message.py  verbose.py
src/parsers/type_definitions/: __init__.py  add_argument_kwargs.py
src/scripts/: main.py  todo.py
src/scripts/tests/: test_notify.py
src/services/: __init__.py  daemon.py  database.py  notification.py  schedule.py
src/services/notification/: _linux.py  _mac.py  (+1 more)
src/test_utils/: __init__.py  parametrize.py
src/todo/: __init__.py  __main__.py  _base.py  cli.py  complete.py  count.py  create.py  delete.py  list_items.py  query.py  show.py  update.py
src/type_definitions/: __init__.py  cell.py  row.py  rows.py
src/utils/: __init__.py  miscellaneous.py  output.py  query.py  terminal.py
test_utils/: parametrize.py
todo/commands/: __init__.py  base.py  complete.py  count.py  create.py  delete.py  list.py  query.py  show.py  update.py
todo/database/: client.py
todo/notify/: __init__.py
todo/scripts/: __init__.py  main.py  notify.py  todo.py
todo/services/: __init__.py  database.py  schedule.py
todo/utils/: __init__.py  date.py  logger.py  notify.py  query.py
(+84 files in other folders)
