[project]
name = "todo"
version = "0.3"
description = "CLI todo list manager"
readme = "README.md"
requires-python = ">=3.13.0"

  [[project.authors]]
  name = "Christopher Johnstone"
  email = "chrispjohnstone97@gmail.com"

  [project.scripts]
  td = "todo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*test*"]
namespaces = true

[tool.black]
line-length = 80
target-version = ['py313']

[tool.pytest.ini_options]
addopts = '-n auto --black'
