[project]
name = "todo"
version = "0.4"
description = "CLI todo list manager"
readme = "README.md"
requires-python = ">=3.13.0"
license = "MIT"

  [[project.authors]]
  name = "Christopher Johnstone"
  email = "chrisj97@proton.me"

  [project.scripts]
  td = "todo.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
exclude = ["*test*"]
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.sql"]

[tool.ruff]
line-length = 80

[tool.pytest.ini_options]
addopts = '-n auto --ruff --ruff-format'

[tool.zuban]
mypy_path = ["src"]
